--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       integrity="sha512-lInM/apFSqyy1o6s89K4iQUKg6ppXEgsVxT35HbzUupEVRh2Eu9Wdl4tHj7dZO0s1uvplcYGmt3498TtHq+log=="
       crossorigin=""></script>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css">
+    <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
+
+
 
   </head>
   <body>
@@ -31,6 +35,13 @@
       </div>
       <div class="col-lg-9">
         <h2>Table</h2>
+        <table id="example">
+          <thead>
+            <tr><th class="site_name">Name</th><th>Url </th><th>Type</th><th>Last modified</th></tr>
+          </thead>
+          <tbody>
+          </tbody>
+        </table>
       </div>
     </div>
     <script>
@@ -56,11 +67,39 @@
     			.setContent("You clicked the map at " + lat + ", " + lng)
     			.openOn(mymap);
         console.log(lat, lng)
+        addData()
     	}
 
     	mymap.on('click', onMapClick);
-
+      function addData() {
+        $("#example").dataTable({
+          "aaData":[
+            ["Sitepoint","http://sitepoint.com","Blog","2013-10-15 10:30:00"],
+            ["Flippa","http://flippa.com","Marketplace","null"],
+            ["99designs","http://99designs.com","Marketplace","null"],
+            ["Learnable","http://learnable.com","Online courses","null"],
+            ["Rubysource","http://rubysource.com","Blog","2013-01-10 12:00:00"]
+          ],
+          "aoColumnDefs":[{
+                "sTitle":"Site name"
+              , "aTargets": [ "site_name" ]
+          },{
+                "aTargets": [ 1 ]
+              , "bSortable": false
+              , "mRender": function ( url, type, full )  {
+                  return  '<a href="'+url+'">' + url + '</a>';
+              }
+          },{
+                "aTargets":[ 3 ]
+              , "sType": "date"
+              , "mRender": function(date, type, full) {
+                  return (full[2] == "Blog")
+                            ? new Date(date).toDateString()
+                            : "N/A" ;
+              }
+          }]
+        });
+      }
     </script>
-
   </body>
 </html>
