Use appropriate headers

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h2>Table</h2>
         <table id="example">
           <thead>
-            <tr><th class="site_name">Name</th><th>Url </th><th>Type</th><th>Last modified</th></tr>
+            <tr><th class="site_name">License ID</th><th>Source System</th><th>Radio Service</th><th>Rollup Status</th><th>Address</th><th>City</th><th>Company</th><th>Antennae</th></tr>
           </thead>
           <tbody>
           </tbody>
@@ -74,7 +74,6 @@
             'license_id',
             'source_system',
             'call_sign',
-            'radio_service_code',
             'radio_service_description',
             'rollup_status_description',
             'lic_address',
