--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
     <script>
 
-    	var mymap = L.map('mapid').setView([51.505, -0.09], 13);
+    	var mymap = L.map('mapid').setView([40.650002, -73.949997], 10);
 
     	L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
     		maxZoom: 18,
@@ -66,9 +66,7 @@
     			.setLatLng(e.latlng)
     			.setContent("You clicked the map at " + lat + ", " + lng)
     			.openOn(mymap);
-        console.log(lat, lng)
         $.getJSON( " http://104.236.108.140:3000/licenses/39.952398/-75.162206", function( data ) {
-          console.log('data', data)
           var items = [];
           var headers = [
             'license_id',
@@ -81,9 +79,14 @@
             'contact_company',
             'ant_type_desc'
           ]
-          $.each( data, function( obj ) {
+          console.log(data)
+          $.each( data.data, function( obj ) {
             for(var x = 0; x < headers.length; x++) {
-              items.push(obj[headers[x]])
+              var row = []
+              if (data[headers[x]]) {
+                row.push(val)
+              }
+              items.push(row)
             }
           });
           addData(items)
@@ -92,6 +95,7 @@
 
     	mymap.on('click', onMapClick);
       function addData(items) {
+        console.log(items)
         // var items = [
         //   ["Sitepoint","http://sitepoint.com","Blog","2013-10-15 10:30:00"],
         //   ["Flippa","http://flippa.com","Marketplace","null"],
@@ -102,23 +106,26 @@
         $("#example").dataTable({
           "aaData": items,
           "aoColumnDefs":[{
-                "sTitle":"Site name"
-              , "aTargets": [ "site_name" ]
-          },{
-                "aTargets": [ 1 ]
-              , "bSortable": false
-              , "mRender": function ( url, type, full )  {
-                  return  '<a href="'+url+'">' + url + '</a>';
-              }
-          },{
-                "aTargets":[ 3 ]
-              , "sType": "date"
-              , "mRender": function(date, type, full) {
-                  return (full[2] == "Blog")
-                            ? new Date(date).toDateString()
-                            : "N/A" ;
-              }
-          }]
+                "sTitle":"License ID"
+              , "aTargets": [ "license_id" ]
+          }
+          // ,{
+          //       "aTargets": [ 1 ]
+          //     , "bSortable": false
+          //     , "mRender": function ( url, type, full )  {
+          //         return  '<a href="'+url+'">' + url + '</a>';
+          //     }
+          // }
+          // ,{
+          //       "aTargets":[ 3 ]
+          //     , "sType": "date"
+          //     , "mRender": function(date, type, full) {
+          //         return (full[2] == "Blog")
+          //                   ? new Date(date).toDateString()
+          //                   : "N/A" ;
+          //     }
+          // }
+          ]
         });
       }
     </script>
